--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,7 @@ body {
 .ant-tabs .ant-tabs-tab-btn:active {
 	color: #e2211c;
 }
+.ant-tabs-nav {
+	background: #000 !important;
+	margin-bottom: 0 !important;
+}
