--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,13 @@ body {
 	background-color: #fff;
 }
 
-.sideNav .ant-layout {
+/* .sideNav .ant-layout {
 	background: none !important;
 }
 
 .sideNav .ant-layout-content {
 	background: none !important;
-}
+} */
 .ant-tabs .ant-tabs-tab .ant-tabs-tab-btn {
 	color: #e2211c;
 	font-weight: 700;
