--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,14 @@ body {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-
+	/* overflow: hidden; */
+	/* overflow-x: scroll; */
 	/* color: #fff; */
 }
 
 body {
 	/* background-color: #000; */
+	overflow-x: hidden;
 }
 .dark {
 	color: #fff;
