--- a/src/pages/Home/FeaturedBike/FeaturedBike.css
+++ b/src/pages/Home/FeaturedBike/FeaturedBike.css
@@ -1,52 +1,29 @@
-.category-item:hover button {
-	transition: all 0.3s;
-	background-color: #e2211c;
-	color: #fff;
-	z-index: 10;
-}
-.category-item:hover button > svg {
-	transition: all 0.3s;
-	background-color: #e2211c;
-	color: #fff;
-}
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
 
-/*Banner Animation*/
-.banner-animation {
-	position: relative;
+.slick-vertical .slick-slide {
+	border: none !important;
 }
-.banner-animation::before {
-	background: #e2231cad;
-	bottom: 0;
-	content: '';
-	left: 50%;
+svg {
+	border-radius: 0;
+}
+.action-link {
 	position: absolute;
-	right: 50%;
-	top: 0;
-	opacity: 1;
-	width: 0;
-}
-.banner-animation::after {
-	background: rgba(255, 54, 93, 0.6);
-	bottom: 50%;
-	content: '';
-	left: 0;
-	position: absolute;
-	right: 0;
-	top: 50%;
-	opacity: 1;
-	width: 0;
-}
-.main-banner:hover .banner-animation::before {
-	left: 0;
-	right: 0;
-	opacity: 0;
-	width: auto;
-	transition: all 900ms linear;
-}
-.main-banner:hover .banner-animation::after {
-	top: 0;
 	bottom: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	background: black;
+	padding: 0 20px;
+	visibility: hidden;
 	opacity: 0;
-	width: auto;
-	transition: all 900ms linear;
+	transition: all 0.5s ease;
+	transform: translateY(60px);
+}
+.new-card:hover .action-link {
+	visibility: visible;
+	opacity: 1;
+	transform: translateY(0px);
 }
